test/bttestParser.py
# Generated from java-escape by ANTLR 4.5
# encoding: utf-8
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .bttestListener import bttestListener
else:
    from bttestListener import bttestListener


class bttestParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'package'", u"'test'", u"'defmat'", 
                     u"'{'", u"','", u"'}'", u"'defvec'", u"'deflist'", 
                     u"'defvar'", u"'defrange'", u"'plot'", u"'print'", 
                     u"'assert'", u"'code'", u"'='", u"'('", u"')'", u"'['", 
                     u"']'", u"'<'", u"'>'", u"'-'", u"'^'", u"'.^'", u"'*'", 
                     u"'/'", u"'.*'", u"'./'", u"'.'", u"'+'", u"'<='", 
                     u"'>='", u"'=='", u"'!='", u"'&&'", u"'||'", u"';'", 
                     u"'<-'", u"'->'", u"'inputmsg'", u"'testmsg'", u"'enddocex'", 
                     u"<INVALID>", u"'@'", u"'!'", u"'$'", u"'#'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"INPUTMSG", u"TESTMSG", u"ENDDOCEX", u"NEWLINE", 
                      u"WBRESULT", u"ANNOUNCE", u"SILENT", u"SEPAR", u"ID", 
                      u"STRING", u"NUMBER", u"WS", u"SL_COMMENT" ]

    RULE_testfile = 0
    RULE_testcase = 1
    RULE_testline = 2
    RULE_inputmsg = 3
    RULE_testmsg = 4
    RULE_enddocex = 5
    RULE_defmat = 6
    RULE_defvec = 7
    RULE_deflist = 8
    RULE_defvar = 9
    RULE_defrange = 10
    RULE_tplot = 11
    RULE_tprint = 12
    RULE_tassert = 13
    RULE_tcode = 14
    RULE_vecspec = 15
    RULE_varlist = 16
    RULE_expression = 17
    RULE_arrindexexpr = 18
    RULE_arrindex = 19
    RULE_primary = 20
    RULE_argumentList = 21
    RULE_tlist = 22
    RULE_terminator = 23

    ruleNames =  [ "testfile", "testcase", "testline", "inputmsg", "testmsg", 
                   "enddocex", "defmat", "defvec", "deflist", "defvar", 
                   "defrange", "tplot", "tprint", "tassert", "tcode", "vecspec", 
                   "varlist", "expression", "arrindexexpr", "arrindex", 
                   "primary", "argumentList", "tlist", "terminator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    INPUTMSG=40
    TESTMSG=41
    ENDDOCEX=42
    NEWLINE=43
    WBRESULT=44
    ANNOUNCE=45
    SILENT=46
    SEPAR=47
    ID=48
    STRING=49
    NUMBER=50
    WS=51
    SL_COMMENT=52

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class TestfileContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(bttestParser.ID, 0)

        def terminator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(bttestParser.TerminatorContext)
            else:
                return self.getTypedRuleContext(bttestParser.TerminatorContext,i)


        def testcase(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(bttestParser.TestcaseContext)
            else:
                return self.getTypedRuleContext(bttestParser.TestcaseContext,i)


        def getRuleIndex(self):
            return bttestParser.RULE_testfile

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.enterTestfile(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.exitTestfile(self)




    def testfile(self):

        localctx = bttestParser.TestfileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_testfile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            _la = self._input.LA(1)
            if _la==bttestParser.EOF or _la==bttestParser.NEWLINE:
                self.state = 48
                self.terminator()


            self.state = 51
            self.match(bttestParser.T__0)
            self.state = 52
            self.match(bttestParser.ID)
            self.state = 53
            self.terminator()
            self.state = 55 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 54
                self.testcase()
                self.state = 57 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==bttestParser.T__1):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TestcaseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(bttestParser.ID, 0)

        def terminator(self):
            return self.getTypedRuleContext(bttestParser.TerminatorContext,0)


        def testline(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(bttestParser.TestlineContext)
            else:
                return self.getTypedRuleContext(bttestParser.TestlineContext,i)


        def getRuleIndex(self):
            return bttestParser.RULE_testcase

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.enterTestcase(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.exitTestcase(self)




    def testcase(self):

        localctx = bttestParser.TestcaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_testcase)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(bttestParser.T__1)
            self.state = 60
            self.match(bttestParser.ID)
            self.state = 61
            self.terminator()
            self.state = 63 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 62
                self.testline()
                self.state = 65 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << bttestParser.T__2) | (1 << bttestParser.T__6) | (1 << bttestParser.T__7) | (1 << bttestParser.T__8) | (1 << bttestParser.T__9) | (1 << bttestParser.T__10) | (1 << bttestParser.T__11) | (1 << bttestParser.T__12) | (1 << bttestParser.T__13) | (1 << bttestParser.INPUTMSG) | (1 << bttestParser.TESTMSG) | (1 << bttestParser.ENDDOCEX))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TestlineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def inputmsg(self):
            return self.getTypedRuleContext(bttestParser.InputmsgContext,0)


        def terminator(self):
            return self.getTypedRuleContext(bttestParser.TerminatorContext,0)


        def testmsg(self):
            return self.getTypedRuleContext(bttestParser.TestmsgContext,0)


        def enddocex(self):
            return self.getTypedRuleContext(bttestParser.EnddocexContext,0)


        def defmat(self):
            return self.getTypedRuleContext(bttestParser.DefmatContext,0)


        def defvec(self):
            return self.getTypedRuleContext(bttestParser.DefvecContext,0)


        def defvar(self):
            return self.getTypedRuleContext(bttestParser.DefvarContext,0)


        def defrange(self):
            return self.getTypedRuleContext(bttestParser.DefrangeContext,0)


        def deflist(self):
            return self.getTypedRuleContext(bttestParser.DeflistContext,0)


        def tcode(self):
            return self.getTypedRuleContext(bttestParser.TcodeContext,0)


        def tprint(self):
            return self.getTypedRuleContext(bttestParser.TprintContext,0)


        def tplot(self):
            return self.getTypedRuleContext(bttestParser.TplotContext,0)


        def tassert(self):
            return self.getTypedRuleContext(bttestParser.TassertContext,0)


        def getRuleIndex(self):
            return bttestParser.RULE_testline

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.enterTestline(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.exitTestline(self)




    def testline(self):

        localctx = bttestParser.TestlineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_testline)
        try:
            self.state = 103
            token = self._input.LA(1)
            if token in [bttestParser.INPUTMSG]:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.inputmsg()
                self.state = 68
                self.terminator()

            elif token in [bttestParser.TESTMSG]:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.testmsg()
                self.state = 71
                self.terminator()

            elif token in [bttestParser.ENDDOCEX]:
                self.enterOuterAlt(localctx, 3)
                self.state = 73
                self.enddocex()
                self.state = 74
                self.terminator()

            elif token in [bttestParser.T__2]:
                self.enterOuterAlt(localctx, 4)
                self.state = 76
                self.defmat()
                self.state = 77
                self.terminator()

            elif token in [bttestParser.T__6]:
                self.enterOuterAlt(localctx, 5)
                self.state = 79
                self.defvec()
                self.state = 80
                self.terminator()

            elif token in [bttestParser.T__8]:
                self.enterOuterAlt(localctx, 6)
                self.state = 82
                self.defvar()
                self.state = 83
                self.terminator()

            elif token in [bttestParser.T__9]:
                self.enterOuterAlt(localctx, 7)
                self.state = 85
                self.defrange()
                self.state = 86
                self.terminator()

            elif token in [bttestParser.T__7]:
                self.enterOuterAlt(localctx, 8)
                self.state = 88
                self.deflist()
                self.state = 89
                self.terminator()

            elif token in [bttestParser.T__13]:
                self.enterOuterAlt(localctx, 9)
                self.state = 91
                self.tcode()
                self.state = 92
                self.terminator()

            elif token in [bttestParser.T__11]:
                self.enterOuterAlt(localctx, 10)
                self.state = 94
                self.tprint()
                self.state = 95
                self.terminator()

            elif token in [bttestParser.T__10]:
                self.enterOuterAlt(localctx, 11)
                self.state = 97
                self.tplot()
                self.state = 98
                self.terminator()

            elif token in [bttestParser.T__12]:
                self.enterOuterAlt(localctx, 12)
                self.state = 100
                self.tassert()
                self.state = 101
                self.terminator()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InputmsgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INPUTMSG(self):
            return self.getToken(bttestParser.INPUTMSG, 0)

        def getRuleIndex(self):
            return bttestParser.RULE_inputmsg

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.enterInputmsg(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.exitInputmsg(self)




    def inputmsg(self):

        localctx = bttestParser.InputmsgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_inputmsg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(bttestParser.INPUTMSG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TestmsgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TESTMSG(self):
            return self.getToken(bttestParser.TESTMSG, 0)

        def getRuleIndex(self):
            return bttestParser.RULE_testmsg

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.enterTestmsg(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.exitTestmsg(self)




    def testmsg(self):

        localctx = bttestParser.TestmsgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_testmsg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(bttestParser.TESTMSG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EnddocexContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENDDOCEX(self):
            return self.getToken(bttestParser.ENDDOCEX, 0)

        def getRuleIndex(self):
            return bttestParser.RULE_enddocex

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.enterEnddocex(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.exitEnddocex(self)




    def enddocex(self):

        localctx = bttestParser.EnddocexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_enddocex)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(bttestParser.ENDDOCEX)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefmatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(bttestParser.ID, 0)

        def SEPAR(self):
            return self.getToken(bttestParser.SEPAR, 0)

        def vecspec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(bttestParser.VecspecContext)
            else:
                return self.getTypedRuleContext(bttestParser.VecspecContext,i)


        def WBRESULT(self):
            return self.getToken(bttestParser.WBRESULT, 0)

        def getRuleIndex(self):
            return bttestParser.RULE_defmat

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.enterDefmat(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.exitDefmat(self)




    def defmat(self):

        localctx = bttestParser.DefmatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_defmat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(bttestParser.T__2)
            self.state = 113
            _la = self._input.LA(1)
            if _la==bttestParser.WBRESULT:
                self.state = 112
                self.match(bttestParser.WBRESULT)


            self.state = 115
            self.match(bttestParser.ID)
            self.state = 116
            self.match(bttestParser.SEPAR)
            self.state = 117
            self.match(bttestParser.T__3)
            self.state = 118
            self.vecspec()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==bttestParser.T__4:
                self.state = 119
                self.match(bttestParser.T__4)
                self.state = 120
                self.vecspec()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self.match(bttestParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefvecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(bttestParser.ID, 0)

        def SEPAR(self):
            return self.getToken(bttestParser.SEPAR, 0)

        def vecspec(self):
            return self.getTypedRuleContext(bttestParser.VecspecContext,0)


        def WBRESULT(self):
            return self.getToken(bttestParser.WBRESULT, 0)

        def getRuleIndex(self):
            return bttestParser.RULE_defvec

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.enterDefvec(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.exitDefvec(self)




    def defvec(self):

        localctx = bttestParser.DefvecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_defvec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(bttestParser.T__6)
            self.state = 130
            _la = self._input.LA(1)
            if _la==bttestParser.WBRESULT:
                self.state = 129
                self.match(bttestParser.WBRESULT)


            self.state = 132
            self.match(bttestParser.ID)
            self.state = 133
            self.match(bttestParser.SEPAR)
            self.state = 134
            self.vecspec()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeflistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(bttestParser.ID, 0)

        def SEPAR(self):
            return self.getToken(bttestParser.SEPAR, 0)

        def vecspec(self):
            return self.getTypedRuleContext(bttestParser.VecspecContext,0)


        def WBRESULT(self):
            return self.getToken(bttestParser.WBRESULT, 0)

        def getRuleIndex(self):
            return bttestParser.RULE_deflist

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.enterDeflist(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.exitDeflist(self)




    def deflist(self):

        localctx = bttestParser.DeflistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_deflist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(bttestParser.T__7)
            self.state = 138
            _la = self._input.LA(1)
            if _la==bttestParser.WBRESULT:
                self.state = 137
                self.match(bttestParser.WBRESULT)


            self.state = 140
            self.match(bttestParser.ID)
            self.state = 141
            self.match(bttestParser.SEPAR)
            self.state = 142
            self.vecspec()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefvarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(bttestParser.ID, 0)

        def SEPAR(self):
            return self.getToken(bttestParser.SEPAR, 0)

        def expression(self):
            return self.getTypedRuleContext(bttestParser.ExpressionContext,0)


        def WBRESULT(self):
            return self.getToken(bttestParser.WBRESULT, 0)

        def getRuleIndex(self):
            return bttestParser.RULE_defvar

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.enterDefvar(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.exitDefvar(self)




    def defvar(self):

        localctx = bttestParser.DefvarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_defvar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(bttestParser.T__8)
            self.state = 146
            _la = self._input.LA(1)
            if _la==bttestParser.WBRESULT:
                self.state = 145
                self.match(bttestParser.WBRESULT)


            self.state = 148
            self.match(bttestParser.ID)
            self.state = 149
            self.match(bttestParser.SEPAR)
            self.state = 150
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefrangeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(bttestParser.ID, 0)

        def SEPAR(self, i:int=None):
            if i is None:
                return self.getTokens(bttestParser.SEPAR)
            else:
                return self.getToken(bttestParser.SEPAR, i)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(bttestParser.NUMBER)
            else:
                return self.getToken(bttestParser.NUMBER, i)

        def WBRESULT(self):
            return self.getToken(bttestParser.WBRESULT, 0)

        def getRuleIndex(self):
            return bttestParser.RULE_defrange

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.enterDefrange(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.exitDefrange(self)




    def defrange(self):

        localctx = bttestParser.DefrangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_defrange)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(bttestParser.T__9)
            self.state = 154
            _la = self._input.LA(1)
            if _la==bttestParser.WBRESULT:
                self.state = 153
                self.match(bttestParser.WBRESULT)


            self.state = 156
            self.match(bttestParser.ID)
            self.state = 157
            self.match(bttestParser.SEPAR)
            self.state = 158
            self.match(bttestParser.NUMBER)
            self.state = 159
            self.match(bttestParser.SEPAR)
            self.state = 160
            self.match(bttestParser.NUMBER)
            self.state = 161
            self.match(bttestParser.SEPAR)
            self.state = 162
            self.match(bttestParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TplotContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(bttestParser.ID)
            else:
                return self.getToken(bttestParser.ID, i)

        def SEPAR(self, i:int=None):
            if i is None:
                return self.getTokens(bttestParser.SEPAR)
            else:
                return self.getToken(bttestParser.SEPAR, i)

        def getRuleIndex(self):
            return bttestParser.RULE_tplot

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.enterTplot(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.exitTplot(self)




    def tplot(self):

        localctx = bttestParser.TplotContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_tplot)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(bttestParser.T__10)
            self.state = 165
            self.match(bttestParser.ID)
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==bttestParser.SEPAR:
                self.state = 166
                self.match(bttestParser.SEPAR)
                self.state = 167
                self.match(bttestParser.ID)
                self.state = 172
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TprintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(bttestParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(bttestParser.ExpressionContext,i)


        def ANNOUNCE(self):
            return self.getToken(bttestParser.ANNOUNCE, 0)

        def SEPAR(self, i:int=None):
            if i is None:
                return self.getTokens(bttestParser.SEPAR)
            else:
                return self.getToken(bttestParser.SEPAR, i)

        def getRuleIndex(self):
            return bttestParser.RULE_tprint

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.enterTprint(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.exitTprint(self)




    def tprint(self):

        localctx = bttestParser.TprintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_tprint)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(bttestParser.T__11)
            self.state = 175
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 174
                self.match(bttestParser.ANNOUNCE)


            self.state = 177
            self.expression(0)
            self.state = 182
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==bttestParser.SEPAR:
                self.state = 178
                self.match(bttestParser.SEPAR)
                self.state = 179
                self.expression(0)
                self.state = 184
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TassertContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(bttestParser.ExpressionContext,0)


        def SEPAR(self):
            return self.getToken(bttestParser.SEPAR, 0)

        def STRING(self):
            return self.getToken(bttestParser.STRING, 0)

        def getRuleIndex(self):
            return bttestParser.RULE_tassert

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.enterTassert(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.exitTassert(self)




    def tassert(self):

        localctx = bttestParser.TassertContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_tassert)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.match(bttestParser.T__12)
            self.state = 186
            self.expression(0)
            self.state = 187
            self.match(bttestParser.SEPAR)
            self.state = 188
            self.match(bttestParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TcodeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(bttestParser.ExpressionContext,0)


        def varlist(self):
            return self.getTypedRuleContext(bttestParser.VarlistContext,0)


        def SILENT(self):
            return self.getToken(bttestParser.SILENT, 0)

        def ANNOUNCE(self):
            return self.getToken(bttestParser.ANNOUNCE, 0)

        def WBRESULT(self):
            return self.getToken(bttestParser.WBRESULT, 0)

        def getRuleIndex(self):
            return bttestParser.RULE_tcode

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.enterTcode(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, bttestListener ):
                listener.exitTcode(self)




    def tcode(self):
